--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/tcqr"]
-	path = src/tcqr
-	url = https://gitlab.momo86.net/mutsuki/tcqr
+[submodule "src/cutf"]
+	path = src/cutf
+	url = https://gitlab.momo86.net/mutsuki/cutf
