--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ CXX=g++
 CXXFLAGS=-std=c++14 -I../src/cutf -I../src
 OMPFLAGS=-fopenmp
 NVCC=nvcc
-NVCCFLAGS=$(CXXFLAGS) --compiler-bindir=$(CXX) -Xcompiler=$(OMPFLAGS) -gencode arch=compute_60,code=sm_60 -gencode arch=compute_70,code=sm_70
+NVCCFLAGS=$(CXXFLAGS) --compiler-bindir=$(CXX) -Xcompiler=$(OMPFLAGS) -gencode arch=compute_75,code=sm_75
 SRCDIR=.
 SRCS=$(shell find $(SRCDIR) -maxdepth 1 -name '*.cu' -o -name '*.cpp')
 OBJDIR=objs
