--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/gemm_core"]
 	path = src/gemm_core
 	url = git@gitlab.momo86.net:mutsuki/gemm_core.git
+[submodule "src/wmma-extension"]
+	path = src/wmma-extension
+	url = https://gitlab.momo86.net/mutsuki/wmma-extension
