Add blockqr to library

--- a/Makefile.library
+++ b/Makefile.library
@@ -8,7 +8,7 @@ OBJDIR=objs
 LIBDIR=lib
 HEADERS=$(shell find $(SRCDIR) -name '*.cuh' -o -name '*.hpp' -o -name '*.h')
 TARGET=libtsqr
-SL_OBJS=$(OBJDIR)/tsqr.o $(OBJDIR)/tcqr32x16.o $(OBJDIR)/tsqr.dlink.o $(OBJDIR)/tcqr32x16.dlink.o
+SL_OBJS=$(OBJDIR)/tsqr.o $(OBJDIR)/tcqr32x16.o $(OBJDIR)/blockqr.o $(OBJDIR)/tsqr.dlink.o $(OBJDIR)/tcqr32x16.dlink.o $(OBJDIR)/blockqr.dlink.o
 
 $(LIBDIR)/$(TARGET).a: $(SL_OBJS)
 	[ -d $(LIBDIR) ] || mkdir $(LIBDIR)
