Fix library name

--- a/Makefile.library
+++ b/Makefile.library
@@ -7,7 +7,7 @@ SRCDIR=src
 OBJDIR=objs
 LIBDIR=lib
 HEADERS=$(shell find $(SRCDIR) -name '*.cuh' -o -name '*.hpp' -o -name '*.h')
-TARGET=libtsqr
+TARGET=libtcqr
 SL_OBJS=$(OBJDIR)/tsqr.o $(OBJDIR)/tcqr32x16.o $(OBJDIR)/blockqr.o $(OBJDIR)/tsqr.dlink.o $(OBJDIR)/tcqr32x16.dlink.o $(OBJDIR)/blockqr.dlink.o
 
 $(LIBDIR)/$(TARGET).a: $(SL_OBJS)
