--- a/test/Makefile
+++ b/test/Makefile
@@ -19,6 +19,9 @@ test: matrix_copy_16x16.test matrix_copy_32x16.test calc_batchsize.test matrix_c
 library_link.test: library_link.cu
 	$(NVCC) $(NVCCFLAGS) $< -o $@ -I../src ../lib/libtcqr.a -lcublas
 
+blockqr.test: blockqr.cu
+	$(NVCC) $(NVCCFLAGS) $< -o $@ -I../src ../lib/libtcqr.a -lcublas
+
 clean:
 	rm -rf *.test
 
