--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "src/gemm_core"]
 	path = src/gemm_core
 	url = https://gitlab.momo86.net/mutsuki/gemm_core.git
-[submodule "src/wmma-extension"]
-	path = src/wmma-extension
-	url = https://gitlab.momo86.net/mutsuki/wmma-extension
 [submodule "src/runtime-status"]
 	path = src/runtime-status
 	url = https://gitlab.momo86.net/mutsuki/runtime-status
+[submodule "src/wmma_extension"]
+	path = src/wmma_extension
+	url = https://github.com/enp1s0/wmma_extension
