--- a/Makefile.library
+++ b/Makefile.library
@@ -1,5 +1,5 @@
 CXX=g++
-CXXFLAGS=-std=c++14 -I./src/cutf -I./src/wmma-extension -O3
+CXXFLAGS=-std=c++14 -I./src/cutf -I./src/wmma_extension/include -O3
 OMPFLAGS=-fopenmp
 NVCC=nvcc
 NVCCFLAGS=$(CXXFLAGS) --compiler-bindir=$(CXX) -Xcompiler=$(OMPFLAGS) -gencode arch=compute_70,code=sm_70 -gencode arch=compute_75,code=sm_75 -lcublas -lcusolver -rdc=true
